Add '25w41a' sources