@@ -4,6 +4,7 @@ import java.time.Duration;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import javax.annotation.Nullable;
 import net.minecraft.util.profiling.jfr.Percentiles;
 
@@ -18,18 +19,18 @@ public record TimedStatSummary<T extends TimedStat>(T fastest, T slowest, @Nulla
       this.totalDuration = var6;
    }
 
-   public static <T extends TimedStat> TimedStatSummary<T> summary(List<T> var0) {
+   public static <T extends TimedStat> Optional<TimedStatSummary<T>> summary(List<T> var0) {
       if (var0.isEmpty()) {
-         throw new IllegalArgumentException("No values");
+         return Optional.empty();
       } else {
          List var1 = var0.stream().sorted(Comparator.comparing(TimedStat::duration)).toList();
          Duration var2 = (Duration)var1.stream().map(TimedStat::duration).reduce(Duration::plus).orElse(Duration.ZERO);
-         TimedStat var3 = (TimedStat)var1.get(0);
-         TimedStat var4 = (TimedStat)var1.get(var1.size() - 1);
+         TimedStat var3 = (TimedStat)var1.getFirst();
+         TimedStat var4 = (TimedStat)var1.getLast();
          TimedStat var5 = var1.size() > 1 ? (TimedStat)var1.get(var1.size() - 2) : null;
          int var6 = var1.size();
          Map var7 = Percentiles.evaluate(var1.stream().mapToLong((var0x) -> var0x.duration().toNanos()).toArray());
-         return new TimedStatSummary<T>(var3, var4, var5, var6, var7, var2);
+         return Optional.of(new TimedStatSummary(var3, var4, var5, var6, var7, var2));
       }
    }
 }
